--- a/src/sales/templates/sales/sale_list.html
+++ b/src/sales/templates/sales/sale_list.html
@@ -5,6 +5,8 @@
 {% block head %}
 <title>Gestion des ventes</title>
 <link rel="stylesheet" href="{% static 'css/quickstockapp/table.css' %}">
+<link rel="stylesheet" href="{% static 'css/quickstockapp/filter_form.css' %}">
+<script src="{% static 'js/quickstockapp/period_change.js' %}" defer></script>
 {% endblock %}
 
 <!-- extra styles  -->
@@ -15,7 +17,41 @@
 <!-- body content -->
 {% block body %}
     <div class="heading">
-        <a class="btn primary" href="{% url 'sales:sale_create' %}">+ Ajouter une vente</a>
+        <div class="filter-form">
+            <form method="GET">
+                <input type="text" name="q" placeholder="Chercher une vente (nom du produit)" value="{{ search_query }}">
+                <select name="current_period" id="period">
+                    {% for period in periods %}
+                        {% if period.month == current_month and period.year == current_year %}
+                        
+                        <option selected value="{{ period.month }}-{{ period.year }}">
+                            {% if period.month == now_period.month and period.year == now_period.year %}
+                            Ce mois-ci
+                            {% else %}
+                            {{ period.month|stringformat:'02d'  }}/{{ period.year }}
+                            {% endif %}
+                        </option>
+                        {% else %}
+                        <option value="{{ period.month }}-{{ period.year }}">
+                            {% if period.month == now_period.month and period.year == now_period.year %}
+                            Ce mois-ci
+                            {% else %}
+                            {{ period.month|stringformat:'02d'  }}/{{ period.year }}
+                            {% endif %}
+                        </option>
+                        {% endif %}
+                        
+                    {% endfor %}
+                </select>
+                <button type="submit" style="display: none;"></button>
+            </form>
+            {% if isfilters %}
+            <a href="{% url 'sales:sale_list' %}">x Annuler tous les filtres</a>
+            {% endif %}
+        </div>
+        <div>
+            <a class="btn primary" href="{% url 'sales:sale_create' %}">+ Ajouter une vente</a>
+        </div>
     </div>
     {% if sale_list %}
     <table>
