--- a/src/quickstockapp/templates/quickstockapp/dashboard.html
+++ b/src/quickstockapp/templates/quickstockapp/dashboard.html
@@ -76,13 +76,17 @@
             <thead>
                 <tr>
                     <th>Nom produit</th>
-                    <th>Total ventes </th>
+                    <th>Total vendu</th>
                 </tr>
             </thead>
             <tbody>
                 {% for product in best_products %}
                 <tr>
-                    <td>{{ product.0 }}</td>
+                    <td>
+                        <a href="{% url 'products:product_details' slug=product.0.slug %}" class="table-link"
+                           title="Quantité restante : {{ product.0.stock_quantity }}">
+                            {{ product.0.name }}</a>
+                    </td>
                     <td>{{ product.1 }}</td>
                 </tr>
                 {% endfor %}
