--- a/src/sales/templates/sales/sale_list.html
+++ b/src/sales/templates/sales/sale_list.html
@@ -65,12 +65,13 @@
         <tbody>
             {% for sale in sale_list %}
             <tr>
-                <td>{{ sale.sale_date }}</td>
+                <td>{{ sale.sale_date|date:"d-m-Y" }}</td>
                 <td class="{{ sale.status_class_name }}">{{ sale.status_display }}</td>
-                <td>{{ sale.product }}</td>
+                <td>
+                    <a class="table-link" title="quantité restante : {{ sale.product.stock_quantity }}"
+                     href="{% url 'products:product_details' slug=sale.product.slug %}">{{ sale.product }}</a>
+                </td>
                 <td>{{ sale.quantity }}</td>
-                <td>{% if sale.byer_name %} {{ sale.byer_name }} {% else %} - {% endif %}</td>
-                <td>{% if sale.byer_phone %} {{ sale.byer_phone }} {% else %} - {% endif %}</td>
                 <td class="actions">
                     <a href="{% url 'sales:sale_details' pk=sale.pk %}">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
