--- a/src/products/templates/products/product_details.html
+++ b/src/products/templates/products/product_details.html
@@ -4,7 +4,9 @@
 <!-- head  -->
 {% block head %}
     <title>Gestion des produits</title>
+    <link rel="stylesheet" href="{% static 'css/quickstockapp/table.css' %}">
     <link rel="stylesheet" href="{% static 'css/quickstockapp/details.css' %}">
+    <script src="{% static 'js/quickstockapp/period_change.js' %}" defer></script>
 {% endblock %}
 
 <!-- extra styles  -->
@@ -31,10 +33,70 @@
         </p>
     </div>
 
-    <a class="link primary" href="{% url 'products:product_update' slug=product.slug%}">modifier</a>
-    <a class="link danger" href="{% url 'products:product_delete' slug=product.slug %}">Supprimer</a>
-    <a class="link" href="{% url 'products:product_list' %}">Retour à liste produits</a>
+    <div class="actions">
+        <a class="link primary" href="{% url 'products:product_update' slug=product.slug%}">modifier</a>
+        <a class="link danger" href="{% url 'products:product_delete' slug=product.slug %}">Supprimer</a>
+        <a class="link" href="{% url 'products:product_list' %}">Retour à liste produits</a>
+    </div>
 
+    <div class="rencent-sales">
+        <div class="title-form">
+            <h4>Récentes ventes</h4>
+            <div class="filter-form">
+                <form method="GET">
+                    <select name="current_period" id="period">
+                        {% for period in periods %}
+                            {% if period.month == current_month and period.year == current_year %}
+                            <option selected value="{{ period.month }}-{{ period.year }}">
+                                {% if period.month == now_period.month and period.year == now_period.year %}
+                                Ce mois-ci
+                                {% else %}
+                                {{ period.month|stringformat:'02d'  }}/{{ period.year }}
+                                {% endif %}
+                            </option>
+                            {% else %}
+                            <option value="{{ period.month }}-{{ period.year }}">
+                                {% if period.month == now_period.month and period.year == now_period.year %}
+                                Ce mois-ci
+                                {% else %}
+                                {{ period.month|stringformat:'02d'  }}/{{ period.year }}
+                                {% endif %}
+                            </option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <button type="submit" style="display: none;"></button>
+                </form>
+            </div>
+        </div>
+
+        {% if recent_sales %}
+        <table>
+            <thead>
+                <tr>
+                    {% for column in sale_column_names %}
+                    <th>{{ column }}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for sale in recent_sales %}
+                <tr>
+                    <td>
+                        <a class="table-link" href="{% url 'sales:sale_details' pk=sale.pk %}">
+                            {{ sale.sale_date|date:"d-m-Y" }}
+                        </a>
+                    </td>
+                    <td class="{{ sale.status_class_name }}">{{ sale.status_display }}</td>
+                    <td>{{ sale.quantity }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <p>Aucune vente</p>
+        {% endif %}
+    </div>
 {% endblock %}
 
 
