--- a/src/quickstockapp/static/css/quickstockapp/details.css
+++ b/src/quickstockapp/static/css/quickstockapp/details.css
@@ -15,3 +15,18 @@ p span {
     font-weight: 600;
     font-size: 1.2rem;
 }
+.actions {
+    margin-bottom: 4rem;
+}
+.recent-sales table tr {
+    background: none;
+}
+h4 {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    text-decoration: underline;
+}
+.title-form {
+    display: flex;
+    gap: 1rem;
+} 
