--- a/src/quickstockapp/templates/quickstockapp/dashboard.html
+++ b/src/quickstockapp/templates/quickstockapp/dashboard.html
@@ -2,14 +2,27 @@
 {% load static %}
 
 {% block head %}
+<link rel="stylesheet" href="{% static 'css/qstockapp/reset.css' %}">
+<link rel="stylesheet" href="{% static 'css/quickstockapp/form.css' %}">
 <link rel="stylesheet" href="{% static 'css/quickstockapp/table.css' %}">
 <link rel="stylesheet" href="{% static 'css/quickstockapp/dashbord.css' %}">
 <script src="{% static 'js/quickstockapp/period_change.js' %}" defer></script>
+<script src="{% static 'js/quickstockapp/stats_display.js' %}" defer></script>
 <title>Tableau de bord</title>
 {% endblock %}
 
 {% block body %}
 <div class="period">
+    <div>
+        <form method="POST" id="stats_display"  
+                class="{% if show_stats %} show {% else %} hide {% endif %}">
+            {% csrf_token %}
+            <input type="hidden" name="request_show_stats" value="0">
+            <button type="submit">
+                {% if show_stats %} Masquer {% else %} Afficher {% endif %}
+            </button>
+        </form>
+    </div>
     <div class="period_form">
         <span>Période :</span>
         <form action="/dashbord/" method="GET">
@@ -48,7 +61,7 @@
             </svg>
                 
             Chiffre d'affaire (FCFA)</p>
-        <p>{{ total_earned }}</p>
+        <p>{% if total_earned %} {{ total_earned }} {% else %} ---- {% endif %}</p>
     </div>
     <div>
         <p class="label">
@@ -56,7 +69,7 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M2.88675 2.88663C1.66675 4.10829 1.66675 6.07163 1.66675 9.99996C1.66675 13.9283 1.66675 15.8925 2.88675 17.1125C4.10841 18.3333 6.07175 18.3333 10.0001 18.3333C13.9284 18.3333 15.8926 18.3333 17.1126 17.1125C18.3334 15.8933 18.3334 13.9283 18.3334 9.99996C18.3334 6.07163 18.3334 4.10746 17.1126 2.88663C15.8934 1.66663 13.9284 1.66663 10.0001 1.66663C6.07175 1.66663 4.10758 1.66663 2.88675 2.88663ZM11.4584 8.33329C11.4584 8.67829 11.7384 8.95829 12.0834 8.95829H12.6584L10.9809 10.6358C10.9616 10.6552 10.9386 10.6706 10.9133 10.6811C10.888 10.6916 10.8608 10.697 10.8334 10.697C10.806 10.697 10.7789 10.6916 10.7536 10.6811C10.7283 10.6706 10.7053 10.6552 10.6859 10.6358L9.36425 9.31413C9.09079 9.04086 8.72001 8.88735 8.33341 8.88735C7.94682 8.88735 7.57604 9.04086 7.30258 9.31413L5.39175 11.225C5.33034 11.2822 5.28109 11.3512 5.24693 11.4278C5.21277 11.5045 5.1944 11.5873 5.19292 11.6712C5.19144 11.7551 5.20688 11.8385 5.23831 11.9163C5.26975 11.9941 5.31653 12.0648 5.37588 12.1242C5.43523 12.1835 5.50593 12.2303 5.58375 12.2617C5.66157 12.2932 5.74493 12.3086 5.82885 12.3071C5.91277 12.3056 5.99553 12.2873 6.0722 12.2531C6.14886 12.219 6.21786 12.1697 6.27508 12.1083L8.18591 10.1975C8.20527 10.1781 8.22826 10.1627 8.25357 10.1522C8.27888 10.1417 8.30601 10.1363 8.33341 10.1363C8.36082 10.1363 8.38795 10.1417 8.41326 10.1522C8.43857 10.1627 8.46156 10.1781 8.48091 10.1975L9.80258 11.5191C10.076 11.7924 10.4468 11.9459 10.8334 11.9459C11.22 11.9459 11.5908 11.7924 11.8642 11.5191L13.5417 9.84246V10.4166C13.5417 10.5824 13.6076 10.7414 13.7248 10.8586C13.842 10.9758 14.001 11.0416 14.1667 11.0416C14.3325 11.0416 14.4915 10.9758 14.6087 10.8586C14.7259 10.7414 14.7917 10.5824 14.7917 10.4166V8.33329C14.7917 8.16753 14.7259 8.00856 14.6087 7.89135C14.4915 7.77414 14.3325 7.70829 14.1667 7.70829H12.0834C11.9177 7.70829 11.7587 7.77414 11.6415 7.89135C11.5243 8.00856 11.4584 8.16753 11.4584 8.33329Z" fill="#61C5A1"/>
             </svg>
             Bénéfice net (FCFA)</p>
-        <p>{{ net_incomme }}</p>
+        <p>{% if net_incomme %} {{ net_incomme }} {% else %} ---- {% endif %} </p>
     </div>
     <div>
         <p class="label">
@@ -64,63 +77,110 @@
                 <path d="M8.74604 37.7031H15.895L13.762 48.2971C13.7155 48.5444 13.692 48.7955 13.692 49.0471C13.692 50.1951 14.488 50.8281 15.59 50.8281C16.715 50.8281 17.535 50.2181 17.77 49.0701L20.066 37.7031H31.152L29.02 48.2971C28.95 48.5311 28.927 48.8131 28.927 49.0471C28.927 50.1951 29.724 50.8281 30.849 50.8281C31.974 50.8281 32.794 50.2181 33.029 49.0701L35.3 37.7031H43.667C44.956 37.7031 45.847 36.7661 45.847 35.5001C45.847 34.4691 45.144 33.6251 44.089 33.6251H36.143L38.63 21.2501H46.833C48.123 21.2501 49.013 20.3131 49.013 19.0471C49.013 18.0161 48.31 17.1721 47.255 17.1721H39.45L41.372 7.72712C41.395 7.58612 41.442 7.28112 41.442 6.97712C41.442 5.82812 40.622 5.17212 39.497 5.17212C38.185 5.17212 37.599 5.89812 37.364 7.00012L35.302 17.1721H24.215L26.137 7.72712C26.16 7.58612 26.207 7.28112 26.207 6.97712C26.207 5.82812 25.363 5.17212 24.262 5.17212C22.926 5.17212 22.316 5.89812 22.105 7.00012L20.043 17.1721H12.356C11.066 17.1721 10.176 18.1561 10.176 19.4451C10.176 20.5001 10.879 21.2501 11.934 21.2501H19.223L16.738 33.6251H9.16804C7.87804 33.6251 6.98804 34.6091 6.98804 35.8981C6.98804 36.9531 7.69104 37.7031 8.74604 37.7031ZM20.886 33.6251L23.395 21.2501H34.48L31.972 33.6251H20.886Z" fill="#9F48E3"/>
             </svg>
             Frais de livraison (FCFA)</p>
-        <p>{{ shipping_fees }}</p>
+        <p>{% if shipping_fees %} {{ shipping_fees }}{% else %} ---- {% endif %} </p>
     </div>
     
 </div>
-<div class="products-status">
-    <div class="best-products">
-        <h3>Meilleur produits</h3>
-        {% if best_products %}
-        <table>
-            <thead>
-                <tr>
-                    <th>Nom produit</th>
-                    <th>Total vendu</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for product in best_products %}
-                <tr>
-                    <td>
-                        <a href="{% url 'products:product_details' slug=product.0.slug %}" class="table-link"
-                           title="Quantité restante : {{ product.0.stock_quantity }}">
-                            {{ product.0.name }}</a>
-                    </td>
-                    <td>{{ product.1 }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% else %}
-        <p>Aucun produit à afficher </p>
-        {% endif %}
+<div class="dashbord-content">
+    <div class="left">
+        <div class="bord best-products">
+            <h3>Meilleur produits ✨ </h3>
+            {% if best_products %}
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nom produit</th>
+                        <th>Total vendu</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in best_products %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'products:product_details' slug=product.0.slug %}" class="table-link"
+                               title="Quantité restante : {{ product.0.stock_quantity }}">
+                                {{ product.0.name }}</a>
+                        </td>
+                        <td>{{ product.1 }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <p>Aucune données </p>
+            {% endif %}
+        </div>
+        <div class="bord recent-sales">
+            <h3>Ventes récentes 🔎</h3>
+            {% if recent_sales %}
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Produit</th>
+                        <th>Quantité vendu</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for sale in recent_sales %}
+                    <tr>
+                        <td>{{ sale.sale_date|date:"d-m-Y" }}</td>
+                        <td>
+                            <a href="{% url 'products:product_details' slug=sale.product.slug %}" class="table-link"
+                               title="Quantité restante : {{ sale.product.stock_quantity }}">
+                                {{ sale.product.name }}</a>
+                        </td>
+                        <td>{{ sale.quantity }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <p>Aucune données </p>
+            {% endif %}
+        </div>
     </div>
-    <div class="out-products">
-        <h3>En rupture de stock</h3>
-        {% if out_of_stock_products %}
-        <table>
-            <thead>
-                <tr>
-                    <th>Nom produit</th>
-                    <th>Quantité en stock</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for product in out_of_stock_products %}
-                <tr class="{% if product.stock_alert != None %} {{ product.stock_alert }} {% endif %}">
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.stock_quantity }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <p>
-            <a href="{% url 'products:product_list' %}">Afficher tout</a>
-        </p>
-        {% else %}
-        <p>Aucun produit à afficher </p>
-        {% endif %}
+    <div class="right">
+        <div class="bord out-products">
+            <h3>En rupture de stock ⛔</h3>
+            {% if out_of_stock_products %}
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nom produit</th>
+                        <th>Quantité en stock</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in out_of_stock_products %}
+                    <tr>
+                        <td>
+                            <a class="table-link" href="{% url 'products:product_details' slug=product.slug %}">
+                                {{ product.name }}
+                            </a>
+                        </td>
+                        <td>{{ product.stock_quantity }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <p>
+                <a href="{% url 'products:product_list' %}">Afficher tout</a>
+            </p>
+            {% else %}
+            <p>Aucune données </p>
+            {% endif %}
+        </div>
     </div>
+</div>
+<div class="pin-code-test {% if not pin_error %} hide {% endif %} ">
+    <h3>Code pin</h3>
+    <form method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="request_show_stats" value="1">
+        <input class="{% if pin_error %} error {% endif %}"
+        type="password" name="pin_code" required minlength="4" maxlength="4" autofocus>
+        <button type="submit" class="btn primary">Valider</button>
+    </form>
 </div>
 {% endblock %}
