--- a/src/settings/static/css/settings/form.css
+++ b/src/settings/static/css/settings/form.css
@@ -1,11 +1,3 @@
-
-
-/* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90vh;
-} */
 h2 {
     margin-bottom: 2rem;
 }
@@ -15,4 +7,32 @@ h2 {
     min-width: 350px;
     max-width: 400px;
 }
-
+input {
+    border: 1px solid var(--lightgray);
+}
+.hide {
+    display: none;
+}
+.pin-edit-btn {
+    color: var(--primary);
+    margin-left: 1rem;
+}
+.pin-edit-btn:hover {
+    text-decoration: underline;
+}
+.pin-code-hashed {
+    font-size: 1.3rem;
+    letter-spacing: 2px;
+}
+input#id_pin_code {
+    max-width: 150px;
+    text-align: center;
+}
+#pin-code-form-content  {
+    display: flex;
+    flex-direction: column;
+    gap: .56rem;
+}
+#pin-code-form-content.hide {
+    display: none;
+}
