Debt app added. and so much more

--- a/src/base_staticfiles/css/qstockapp/base.css
+++ b/src/base_staticfiles/css/qstockapp/base.css
@@ -121,6 +121,8 @@ input.error {
 }
 .menu li.current a {
     border-left: 3px solid var(--primary);
+    font-weight: 700;
+    color: var(--primary);
 }
 .menu a:hover {
     transform: translateX(10px);
