--- a/src/orders/templates/orders/order_create.html
+++ b/src/orders/templates/orders/order_create.html
@@ -18,7 +18,50 @@
 <form method="POST">
     {% csrf_token %} 
     <div class="form-content">
-        {{ form }}
+        <div>
+            {{ form.product.label_tag }}
+            {{ form.product }}
+        </div>
+        <div>
+            {{ form.order_date.label_tag }}
+            {% include 'qstockapp/date_input.html' %}
+            {{ form.order_date.as_hidden }}
+            {% include 'qstockapp/date_input_binding.html' %}            
+        </div>
+        <div>
+            {{ form.quantity.label_tag }}
+            {{ form.quantity }}
+        </div>
+        <div>
+            {{ form.store.label_tag }}
+            {{ form.store }}
+        </div>
+        <div>
+            {{ form.provider_name.label_tag }}
+            {{ form.provider_name }}
+        </div>
+        <div>
+            {{ form.provider_phone.label_tag }}
+            {{ form.provider_phone }}
+        </div>
+        <div>
+            {{ form.status.label_tag }}
+            {{ form.status }}
+        </div>
+        <div>
+            {{ form.arrived_date.label_tag }}
+            {% include 'qstockapp/date_input.html' %}
+            {{ form.arrived_date.as_hidden }}
+            {% include 'qstockapp/date_input_binding.html' %}            
+        </div>
+        <div>
+            {{ form.shipping_costs.label_tag }}
+            {{ form.shipping_costs }}
+        </div>
+        <div>
+            {{ form.description.label_tag }}
+            {{ form.description }}
+        </div>
     </div>
     <button type="submit">Enrégistrer</button>
     <a class="link" href="{% url 'orders:order_list' %}">Annuler</a>
