--- a/src/quickstockapp/static/css/quickstockapp/table.css
+++ b/src/quickstockapp/static/css/quickstockapp/table.css
@@ -36,6 +36,9 @@ tr.warn {
     background-color: var(--product-stock-warn-background);
     border: 1px solid var(--product-stock-warn-border);
 }
+.table-link {
+    font-weight: 700;
+}
 .table-link:hover {
     color: var(--primary);
 }
