debt model updated. and others

--- a/src/debts/templates/debts/debt_create.html
+++ b/src/debts/templates/debts/debt_create.html
@@ -34,8 +34,8 @@
             {{ form.initial_amount }}
         </div>
         <div>
-            {{ form.order.label_tag }}
-            {{ form.order }}
+            {{ form.store.label_tag }}
+            {{ form.store }}
         </div>
     </div>
     <button type="submit">Enrégistrer</button>
