--- a/src/debts/templates/debts/debt_update.html
+++ b/src/debts/templates/debts/debt_update.html
@@ -33,8 +33,8 @@
             {{ form.initial_amount }}
         </div>
         <div>
-            {{ form.order.label_tag }}
-            {{ form.order }}
+            {{ form.store.label_tag }}
+            {{ form.store }}
         </div>
     </div>
     <button type="submit">Modifier</button>
