--- a/src/debts/templates/debts/debt_details.html
+++ b/src/debts/templates/debts/debt_details.html
@@ -92,6 +92,13 @@
                     <td>{{ repayment.amount|money_string }}</td>
                     <td>{{ repayment.repaid_by_str }}</td>
                     <td>{{ repayment.note }}</td>
+                    <td>
+                        <a href="{% url 'debts:edit_repayment' debt_pk=debt.pk repayment_pk=repayment.pk %}">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20.71 7.04C21.1 6.65 21.1 6 20.71 5.63L18.37 3.29C18 2.9 17.35 2.9 16.96 3.29L15.12 5.12L18.87 8.87M3 17.25V21H6.75L17.81 9.93L14.06 6.18L3 17.25Z" fill="black"/>
+                            </svg>
+                        </a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
