--- a/src/accounts/templates/accounts/details.html
+++ b/src/accounts/templates/accounts/details.html
@@ -10,27 +10,48 @@
 
 
 {% block body %}
-<h3>Informations utilisateur</h3>
-<div class="properties">
-    <p>Nom d'utilisateur <span>{{ user.username }}</span></p>
-    <p>email <span>{% if user.email %} {{ user.email }} {% else %} _ {% endif %}</span></p>
-    <p>Nom <span>{% if user.last_name %} {{ user.last_name }} {% else %} _ {% endif %}</span></p>
-    <p>Prénom <span>{% if user.first_name %} {{ user.first_name }} {% else %} _ {% endif %}</span></p>
+<div class="section informations">
+    <h3>Informations utilisateur</h3>
+    <div class="properties">
+        <p>Nom d'utilisateur <span>{{ user.username }}</span></p>
+        <p>email <span>{% if user.email %} {{ user.email }} {% else %} _ {% endif %}</span></p>
+        <p>Nom <span>{% if user.last_name %} {{ user.last_name }} {% else %} _ {% endif %}</span></p>
+        <p>Prénom <span>{% if user.first_name %} {{ user.first_name }} {% else %} _ {% endif %}</span></p>
+    </div>
+    <p>
+        <a href="{% url 'accounts:update' %}" class="link primary">Modifier mes informations</a>
+    </p>
 </div>
-<p>
-    <a href="{% url 'accounts:update' %}" class="btn primary">Modifier mes informations</a>
-</p>
-<div class="password-edit">
-    <h4>Modifier votre mot de passe</h4>
+<div class="section pin-code">
+    <h3>Code pin utilisateur</h3>
+    <form method="POST" class="pin-code-form">
+        {% csrf_token %}
+        <input type="hidden" value="change_pin_code" name="request">
+        <div class="form-content">
+            <label for="pin_code">Modifier votre code pin</label>
+            <span>**********</span> 
+            {% for error in pin_code_form.erros %}
+            <p class="error">{{ error }}</p>
+            {% endfor %}
+            {{ pin_code_form.pin_code }}
+            {{ pin_code_form.password_confirm }}
+        </div>
+        <button type="submit">Enrégistrer</button>
+    </form>
+</div>
+
+<div class="section password-edit">
+    <h3>Modifier votre mot de passe</h3>
     <div class="error">{{ password_change_faild }}</div>
     <form method="POST">
         {% csrf_token %}
+        <input type="hidden" value="change_password" name="request">
         <div class="form-content">
             <input type="password" required placeholder="Mot de passe actuel" name="current_password">
             <input type="password" required placeholder="Nouveau mot de passe" name="new_password">
             <input type="password" required placeholder="Répéter nouveau mot de passe" name="new_password_repeat">
         </div>
-        <button type="submit">Valider</button>
+        <button type="submit">Modifier mon mot de passe</button>
     </form>
 </div>
 {% endblock %}
