--- a/src/quickstockapp/static/css/quickstockapp/table.css
+++ b/src/quickstockapp/static/css/quickstockapp/table.css
@@ -42,3 +42,8 @@ tr.warn {
 .table-link:hover {
     color: var(--primary);
 }
+.search-form {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
