--- a/src/base_staticfiles/css/qstockapp/base.css
+++ b/src/base_staticfiles/css/qstockapp/base.css
@@ -12,6 +12,11 @@ h3 {
     font-size: 1.5rem;
     font-weight: 500;
 }
+.search-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .btn {
     padding: 5px 10px;
     border: 1px solid var(--gray);
@@ -77,7 +82,11 @@ input.error {
 }
 .app_name {
     margin-bottom: 2rem;
+    border-bottom: 1px solid var(--gray);
     padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: .6rem;
 }
 .app_name h1 {
     white-space: nowrap;
@@ -101,20 +110,32 @@ input.error {
 }
 .sidebar .bottom a {
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    justify-content: flex-start;
+}
+.sidebar .bottom path {
+    fill: var(--gray);
+}
+.sidebar .bottom .debt-link path {
+    stroke: var(--gray);
 }
 .sidebar .bottom a:hover {
     text-decoration: underline;
 }
 .menu {
-    border-top: 1px solid var(--gray);
     padding: 10px 0;
 }
 .menu a {
     padding: 10px 18px;
-    display: inline-block;
+    display: flex;
     width: 100%;
     transition: all 100ms ease;
     transition: transform 200ms ease;
+    justify-content: flex-start;
+    align-items: center;
+    gap: .5rem;
 }
 .menu li {
     overflow: hidden;
@@ -123,6 +144,12 @@ input.error {
     border-left: 3px solid var(--primary);
     font-weight: 700;
     color: var(--primary);
+}
+.menu path {
+    fill: var(--gray);
+}
+.menu li.current path {
+    fill: var(--primary);
 }
 .menu a:hover {
     transform: translateX(10px);
