qstockapp/base.css : some changes

--- a/src/base_staticfiles/css/qstockapp/base.css
+++ b/src/base_staticfiles/css/qstockapp/base.css
@@ -201,6 +201,9 @@ header > div {
     outline: none;
     font-weight: 700;
 }
+input[type=checkbox] {
+    max-width: 50px;
+}
 .status.validated {
     color: var(--accent);
 }
